--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 author: azalea7788
 
 theme: minima
-google_analytics: G-3GLC0KKYJH
+google_analytics: G-NNNNNNNNNN  // Google Analyticsの有効化のために仮の値を設定
