--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ remote_theme: "jekyll/minima@c6e74bb"
 google_analytics: UA-NNNNNNNN-N // Google Analyticsの有効化のために仮の値を設定
 author: コシヒカリ
 description: >
-  ご連絡はX（旧Twitter）のDMにお願いいたします。
+  ご連絡はX（旧Twitter）のDMまでお願いいたします。
 lang: ja
