--- a/_config.yml
+++ b/_config.yml
@@ -5,5 +5,5 @@ description: >
   ご連絡はX（旧Twitter）のDMまでお願いいたします。
 lang: ja
 twitter:
-  username: user
+  username: jekyllrb
   card: summary_large_image
